@@ -1,0 +1,3 @@
+FILES op14e.o
+
+INCLUDE 12f1822_g.lkr
